--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
 	<meta charset="UTF-8">
@@ -7,6 +7,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="dist/output.css" rel="stylesheet">
 	<title>Portfolio</title>
+
+	<script>
+		// On page load or when changing themes, best to add inline in `head` to avoid FOUC
+		if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)')
+				.matches)) {
+			document.documentElement.classList.add('dark')
+		} else {
+			document.documentElement.classList.remove('dark')
+		}
+	</script>
 </head>
 
 <body>
@@ -24,32 +34,52 @@
 						<span class="hamburger-line transition duration-300 ease-in-out origin-bottom-left"></span>
 					</button>
 
-					<nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full 
-						lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+					<nav id="nav-menu"
+						class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full 
+						lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none dark:bg-dark dark:shadow-slate-500 lg:dark:bg-transparent">
 						<ul class="block lg:flex">
 							<li class="group">
-								<a href="#home" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Beranda</a>
+								<a href="#home"
+									class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Beranda</a>
 							</li>
 
 							<li class="group">
-								<a href="#about" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Tentang
+								<a href="#about"
+									class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Tentang
 									Saya</a>
 							</li>
 
 							<li class="group">
-								<a href="#portfolio" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Portfolio</a>
+								<a href="#portfolio"
+									class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Portfolio</a>
 							</li>
 
 							<li class="group">
-								<a href="#clients" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Clients</a>
+								<a href="#clients"
+									class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Clients</a>
 							</li>
 
 							<li class="group">
-								<a href="#blog" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Blog</a>
+								<a href="#blog"
+									class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Blog</a>
 							</li>
 
 							<li class="group">
-								<a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Contact</a>
+								<a href="#contact"
+									class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Contact</a>
+							</li>
+							<li class="flex items-center pl-8 mt-3 lg:mt-0">
+								<div class="flex">
+									<span class="mr-2 text-sm text-slate-500">light</span>
+									<input type="checkbox" class="hidden" id="dark-toggle" />
+									<label for="dark-toggle">
+										<div class="flex h-5 w-9 cursor-pointer items-center rounded-full bg-slate-500 p-1">
+											<div class="toggle-circle h-4 w-4 rounded-full bg-white transition duration-300 ease-in-out">
+											</div>
+										</div>
+									</label>
+									<span class="ml-2 text-sm text-slate-500">dark</span>
+								</div>
 							</li>
 						</ul>
 					</nav>
@@ -61,13 +91,13 @@
 
 
 	<!-- Hero Section Start -->
-	<section id="home" class="pt-36">
+	<section id="home" class="pt-36 dark:bg-dark transition ease-in-out duration-300">
 		<div class="container">
 			<div class="flex flex-wrap">
 				<div class="w-full self-center px-4 lg:w-1/2">
 					<h1 class="text-base font-semibold text-primary md:text-xl">Hallo Semua 👋, saya
-						<span class="block font-bold text-dark text-4xl lg:text-5xl"> Satria Budi</span></h1>
-					<h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Frontend Developer</h2>
+						<span class="block font-bold text-dark text-4xl lg:text-5xl dark:text-white"> Satria Budi</span></h1>
+					<h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl dark:text-white">Frontend Developer</h2>
 					<p class="font-medium text-secondary mb-10 leading-relaxed">Belajar web itu mudah dan menyenangkan
 					</p>
 					<a href="" class="text-base font-semibold bg-primary text-white py-3 px-8 rounded-full
@@ -77,8 +107,8 @@
 
 				<div class="w-full self-end px-4 lg:w-1/2">
 					<div class="relative mt-10 lg:mt-9 lg:right-0">
-						<img src="./dist/img/satriabudi.png" alt="Satria Budi" class="max-w-ful mx-auto" />
-						<span class="absolute -bottom-0 -z-10 left-1/2 -translate-x-1/2 -translate-y-1/5 md:scale-125">
+						<img src="./dist/img/satriabudi.png" alt="Satria Budi" class="max-w-ful mx-auto relative z-10" />
+						<span class="absolute -bottom-0 left-1/2 -translate-x-1/2 -translate-y-1/5 md:scale-125">
 							<svg width="450" height="500" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
 								<path fill="#14b8a6"
 									d="M61.7,-39.6C68,-24.7,52.9,-1.4,39.1,17.3C25.2,36.1,12.6,50.4,0.8,50C-11.1,49.5,-22.2,34.4,-32.7,17.5C-43.3,0.6,-53.3,-18,-47.7,-32.4C-42.2,-46.8,-21.1,-57.1,3.3,-59C27.7,-60.9,55.4,-54.4,61.7,-39.6Z"
@@ -93,12 +123,13 @@
 	<!-- Hero Section End -->
 
 	<!-- About Section Start -->
-	<section id="about" class="pt-36 pb-32">
+	<section id="about" class="pt-36 pb-32 dark:bg-dark transition ease-in-out duration-300">
 		<div class="container">
 			<div class="flex flex-wrap">
 				<div class="w-full px-4 mb-10 lg:w-1/2">
 					<h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
-					<h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Yuk Belajar web programing</h2>
+					<h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl dark:text-white">Yuk Belajar web programing
+					</h2>
 					<p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet
 						consectetur
 						adipisicing elit.
@@ -107,7 +138,7 @@
 				</div>
 
 				<div class="w-full px-4 lg:w-1/2">
-					<h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Mari Berteman</h3>
+					<h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10 dark:text-white">Mari Berteman</h3>
 					<p class="font-medium text-base text-secondary mb-6 lg:text-lg">Lorem ipsum dolor sit amet
 						consectetur
 						adipisicing
@@ -172,13 +203,14 @@
 	<!-- About Section End -->
 
 	<!-- Portfolio Section Start -->
-	<section id="portfolio" class="pt-36 pb-16 bg-slate-100">
+	<section id="portfolio" class="pt-36 pb-16 bg-slate-100 dark:bg-slate-800 transition ease-in-out duration-300">
 		<div class="container">
 			<div class="w-full px-4">
 				<div class="max-w-xl mx-auto text-center mb-16">
 					<h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
-					<h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project Terbaru</h2>
-					<p class="font-medium text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut
+					<h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">Project Terbaru</h2>
+					<p class="font-medium text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing
+						elit. Ut
 						nostrum suscipit expedita voluptates inventore
 						explicabo nisi eius tenetur enim consequuntur?</p>
 				</div>
@@ -189,8 +221,9 @@
 					<div class="rounded-md shadow-md overflow-hidden">
 						<img src="dist/img/portfolio/1.png" alt="" width="w-full">
 					</div>
-					<h3 class="font-semibold text-dark text-xl mt-5 mb-3">Satria Budi Quasargram Project</h3>
-					<p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+					<h3 class="font-semibold text-dark text-xl mt-5 mb-3 dark:text-white">Satria Budi Quasargram Project</h3>
+					<p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing
+						elit. Esse
 						hic commodi nostrum.</p>
 				</div>
 
@@ -198,8 +231,9 @@
 					<div class="rounded-md shadow-md overflow-hidden">
 						<img src="dist/img/portfolio/2.png" alt="" width="w-full">
 					</div>
-					<h3 class="font-semibold text-dark text-xl mt-5 mb-3">Satria Budi Smackchat Project</h3>
-					<p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+					<h3 class="font-semibold text-dark text-xl mt-5 mb-3 dark:text-white">Satria Budi Smackchat Project</h3>
+					<p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing
+						elit. Esse
 						hic commodi nostrum.</p>
 				</div>
 
@@ -207,8 +241,9 @@
 					<div class="rounded-md shadow-md overflow-hidden">
 						<img src="dist/img/portfolio/3.png" alt="" width="w-full">
 					</div>
-					<h3 class="font-semibold text-dark text-xl mt-5 mb-3">Satria Budi Qtwitter Project</h3>
-					<p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+					<h3 class="font-semibold text-dark text-xl mt-5 mb-3 dark:text-white">Satria Budi Qtwitter Project</h3>
+					<p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing
+						elit. Esse
 						hic commodi nostrum.</p>
 				</div>
 
@@ -216,8 +251,9 @@
 					<div class="rounded-md shadow-md overflow-hidden">
 						<img src="dist/img/portfolio/4.png" alt="" width="w-full">
 					</div>
-					<h3 class="font-semibold text-dark text-xl mt-5 mb-3">Satria Budi Portfolio Project</h3>
-					<p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+					<h3 class="font-semibold text-dark text-xl mt-5 mb-3 dark:text-white">Satria Budi Portfolio Project</h3>
+					<p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing
+						elit. Esse
 						hic commodi nostrum.</p>
 				</div>
 			</div>
@@ -226,13 +262,15 @@
 	<!-- Portfolio Section End -->
 
 	<!-- Clients Section Start -->
-	<section id="clients" class="pt-36 pb-32 bg-slate-800">
+	<section id="clients" class="pt-36 pb-32 bg-slate-800 dark:bg-slate-300 transition ease-in-out duration-300">
 		<div class="container">
 			<div class="w-full px-4">
 				<div class="mx-auto text-center mb-16">
 					<h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
-					<h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Yang Pernah Berkejasama</h2>
-					<p class="font-medium text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					<h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-dark">Yang Pernah Berkejasama
+					</h2>
+					<p class="font-medium text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing
+						elit.
 						Perferendis non
 						ipsam quis?</p>
 				</div>
@@ -271,26 +309,30 @@
 	<!-- Clients Section End -->
 
 	<!-- Blog Section Start -->
-	<section id="blog" class="pt-36 pb-32 bg-slate-100">
+	<section id="blog" class="pt-36 pb-32 bg-slate-100 dark:bg-dark transition ease-in-out duration-300">
 		<div class="container">
 			<div class="w-full px-4">
 				<div class="max-w-xl mx-auto text-center mb-16">
 					<h4 class="font-semibold text-lg text-primary mb-2">Blog</h4>
-					<h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Tulisan Terkini</h2>
-					<p class="font-medium text-secondary md:text-lg">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					<h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">Tulisan Terkini</h2>
+					<p class="font-medium text-secondary md:text-lg">Lorem ipsum dolor, sit amet consectetur adipisicing
+						elit.
 						Similique, praesentium. Aspernatur, facilis officia!
 				</div>
 			</div>
 
 			<div class="flex flex-wrap justify-center">
 				<div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-					<div class="bg-white rounded-xl overflow-hidden shadow-lg mb-10">
+					<div class="bg-white rounded-xl overflow-hidden shadow-lg mb-10 dark:bg-slate-800">
 						<img src="https://source.unsplash.com/360x200?programming" alt="Programming" class="w-full" />
 						<div class="py-8 px-6">
 							<h3>
-								<a href="" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate"> Tips Belajar
+								<a href=""
+									class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white"> Tips
+									Belajar
 									Programming </a></h3>
-							<p class="font-medium text-base text-secondary mb-6">Lorem ipsum dolor sit amet consectetur adipisicing
+							<p class="font-medium text-base text-secondary mb-6">Lorem ipsum dolor sit amet consectetur
+								adipisicing
 								elit. Excepturi, ad. Aliquid nobis animi omnis quis quam!
 							</p>
 							<a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca
@@ -300,13 +342,15 @@
 				</div>
 
 				<div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-					<div class="bg-white rounded-xl overflow-hidden shadow-lg mb-10">
+					<div class="bg-white rounded-xl overflow-hidden shadow-lg mb-10 dark:bg-slate-800">
 						<img src="https://source.unsplash.com/360x200?mechanical+keyboard" alt="Programming" class="w-full" />
 						<div class="py-8 px-6">
 							<h3>
-								<a href="" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Review
+								<a href=""
+									class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">Review
 									Keyboard Keychrone K2</a></h3>
-							<p class="font-medium text-base text-secondary mb-6">Lorem ipsum dolor sit amet, consectetur adipisicing
+							<p class="font-medium text-base text-secondary mb-6">Lorem ipsum dolor sit amet, consectetur
+								adipisicing
 								elit. Cumque voluptate ad excepturi beatae fugiat, numquam molestias.
 							</p>
 							<a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca
@@ -316,13 +360,16 @@
 				</div>
 
 				<div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-					<div class="bg-white rounded-xl overflow-hidden shadow-lg mb-10">
+					<div class="bg-white rounded-xl overflow-hidden shadow-lg mb-10 dark:bg-slate-800">
 						<img src="https://source.unsplash.com/360x200?coffe" alt="Coffe" class="w-full" />
 						<div class="py-8 px-6">
 							<h3>
-								<a href="" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate"> Menikmati
+								<a href=""
+									class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">
+									Menikmati
 									secangkir kopi </a></h3>
-							<p class="font-medium text-base text-secondary mb-6">Lorem ipsum dolor, sit amet consectetur adipisicing
+							<p class="font-medium text-base text-secondary mb-6">Lorem ipsum dolor, sit amet consectetur
+								adipisicing
 								elit. Harum quam dolorem amet quidem vero eos at.
 							</p>
 							<a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca
@@ -336,20 +383,21 @@
 	<!-- Blog Section End -->
 
 	<!-- Contact Section Start -->
-	<section id="contact" class="pt-36 pb-32">
+	<section id="contact" class="pt-36 pb-32 dark:bg-slate-800 transition ease-in-out duration-300">
 		<div class="container">
 			<div class="w-full px-4">
 				<div class="max-w-xl mx-auto text-center mb-16">
 					<h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
-					<h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Hubungi Kami</h2>
-					<p class="font-medium text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					<h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">Hubungi Kami</h2>
+					<p class="font-medium text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing
+						elit.
 						Voluptatibus cumque omnis quos blanditiis distinctio in!</p>
 				</div>
 			</div>
 
 			<form>
 				<div class="w-full lg:w-2/3 lg:mx-auto">
-					<div class="w-full px-4 mb-8 ">
+					<div class="w-full px-4 mb-8">
 						<label for="name" class="text-base text-primary font-bold">Nama</label>
 						<input type="text" id="name"
 							class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary" />
@@ -392,7 +440,7 @@
 				</div>
 
 				<div class="w-full px-4 mb-12 md:w-1/3">
-					<h3 class="font-semibold text-xl text-white mb-5">
+					<h3 class="mb-5 font-semibold text-xl text-white ">
 						Kategori Tulisan
 					</h3>
 					<ul class="text-slate-300">
@@ -496,6 +544,13 @@
 		</div>
 	</footer>
 	<!-- Footer Section End -->
+
+	<!-- Back to top Start -->
+	<a href="#home" id="toTop"
+		class="h-14 w-14 bg-primary rounded-full fixed z-[9999] bottom-4 right-4 p-4 justify-center items-center hover:animate-pulse hidden">
+		<span class="block w-5 h-5 border-t-2 border-l-2 rotate-45 mt-2"></span>
+	</a>
+	<!-- Back to top End -->
 
 
 	<script src="dist/js/script.js"></script>
